crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_angular_param_decorators_on_members.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Injectable, Inject, Optional } from "@angular/core";
import { __decorate } from "tslib";
function Custom() {
	return function(t, k) {};
}
let MyService = class MyService {
	token;
	optionalDep;
	customProp = "";
	static propDecorators = {
		token: [{
			type: Inject,
			args: ["TOKEN"]
		}],
		optionalDep: [{ type: Optional }]
	};
};
__decorate([Custom()], MyService.prototype, "customProp", void 0);
MyService = __decorate([Injectable()], MyService);
export { MyService };
