crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_class_restructuring.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Component } from '@angular/core';
import { __decorate } from "tslib";

let AppComponent = class AppComponent {
    title = 'app';
};
AppComponent = __decorate([
    Component({
    selector: 'app-root',
    template: '<h1>Hello</h1>',
})
], AppComponent);
export { AppComponent };
