crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_constructor_deps.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Component } from '@angular/core';
import { TitleService } from './title.service';
import { __decorate } from "tslib";

let AppComponent = class AppComponent {
    constructor(private titleService: TitleService) {}

static ctorParameters = () => [
    { type: TitleService }
];
};
AppComponent = __decorate([
    Component({
    selector: 'app-root',
    template: '<h1>Hello</h1>',
})
], AppComponent);
export { AppComponent };
