crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_default_export_class.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Injectable } from "@angular/core";
import { __decorate } from "tslib";
function Logger() {
	return function(t) {
		return t;
	};
}
let AppService = class AppService {
	process() {}
};
__decorate([Logger()], AppService.prototype, "process", null);
AppService = __decorate([Logger(), Injectable()], AppService);
export default AppService;
