crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_directive.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Directive, Input } from '@angular/core';
import { __decorate } from "tslib";

let HighlightDirective = class HighlightDirective {
    color: string = 'yellow';
};
HighlightDirective = __decorate([
    Directive({
    selector: '[appHighlight]',
    standalone: true,
})
], HighlightDirective);
export { HighlightDirective };
