crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_full_component.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Component, signal } from "@angular/core";
import { RouterOutlet } from "@angular/router";
import { Lib1 } from "lib1";
import { TitleService } from "./title.service";
import { __decorate } from "tslib";
import __NG_CLI_RESOURCE__0 from "angular:jit:template:file;./app.html";
import __NG_CLI_RESOURCE__1 from "angular:jit:style:file;./app.css";
let App = class App {
	title = signal("app");
	constructor(titleService) {
		this.titleService = titleService;
		this.title.set(this.titleService.getTitle());
	}
	static ctorParameters = () => [{ type: TitleService }];
};
App = __decorate([Component({
	selector: "app-root",
	imports: [RouterOutlet, Lib1],
	template: __NG_CLI_RESOURCE__0,
	styles: [__NG_CLI_RESOURCE__1]
})], App);
export { App };
